# Narthex

./: .gitignore  README.md  index.html  package-lock.json  package.json  video_script.md
circuits/: Nargo.toml
circuits/src/: main.nr
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/compliance-shield/: Cargo.toml
contracts/compliance-shield/src/: lib.rs  test.rs
contracts/rwa-token/: Cargo.toml
contracts/rwa-token/src/: lib.rs  test.rs
scripts/: compile.js  deploy.js  prove.js  push.js
src/: App.jsx  index.css  main.jsx  mockSoroban.js
