[workspace]
resolver = "2"
members = [
    "compliance-shield",
    "rwa-token",
]

[workspace.dependencies]
soroban-sdk = { version = "26.0.1", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = true
lto = true
panic = "abort"
codegen-units = 1
